--- a/eng/common/templates/stages/build-test-publish-repo.yml
+++ b/eng/common/templates/stages/build-test-publish-repo.yml
@@ -24,13 +24,13 @@ stages:
 - stage: Build
   condition: and(succeeded(), contains(variables['stages'], 'build'))
   jobs:
-  - template: ../jobs/test-images-linux-client.yml
-    parameters:
-      name: PreBuildValidation
-      pool:
-        vmImage: $(defaultLinuxAmd64PoolImage)
-      testJobTimeout: ${{ parameters.linuxAmdTestJobTimeout }}
-      preBuildValidation: true
+  # - template: ../jobs/test-images-linux-client.yml
+  #   parameters:
+  #     name: PreBuildValidation
+  #     pool:
+  #       vmImage: $(defaultLinuxAmd64PoolImage)
+  #     testJobTimeout: ${{ parameters.linuxAmdTestJobTimeout }}
+  #     preBuildValidation: true
 
   - template: ../jobs/generate-matrix.yml
     parameters:
